--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <div class="card_description">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
-              <i class="fa-solid fa-heart-half"></i>
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             </div>
           </a>
 
@@ -74,7 +75,7 @@
             <div class="card_description">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
-              <i class="fa-solid fa-heart-half"></i>
+              <i class="fa-regular fa-heart"></i>
             </div>
           </a>
           <a href="#" class="card decorationNone">
@@ -87,7 +88,7 @@
             <div class="card_description">
               <h3>A la française</h3>
               <p>Cité Rouge</p>
-              <i class="fa-solid fa-heart-half"></i>
+              <i class="fa-regular fa-heart"></i>
             </div>
           </a>
           <a href="#" class="card decorationNone">
@@ -100,11 +101,22 @@
             <div class="card_description">
               <h3>Le délice des sens</h3>
               <p>Folie-Méricourt</p>
-              <i class="fa-solid fa-heart-half"></i>
+              <i class="fa-regular fa-heart"></i>
             </div>
           </a>
         </div>
       </section>
     </main>
+    <footer>
+      <h2>ohmyfood</h2>
+      <p>
+        <i class="fa-solid fa-utensils"></i>
+        Proposer un restaurant</p>
+      <p>
+        <i class="fa-solid fa-handshake-angle"></i>
+        Devenir partenaire</p>
+      <p>Mentions légales</p>
+      <p>Contact</p>
+    </footer>
   </body>
 </html>
