--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
               <h3>La note enchantée</h3>
               <p>Charonne</p>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             </div>
           </a>
           <a href="#" class="card decorationNone">
@@ -89,6 +90,7 @@
               <h3>A la française</h3>
               <p>Cité Rouge</p>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             </div>
           </a>
           <a href="#" class="card decorationNone">
@@ -102,6 +104,7 @@
               <h3>Le délice des sens</h3>
               <p>Folie-Méricourt</p>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             </div>
           </a>
         </div>
