--- a/pages/resto1.html
+++ b/pages/resto1.html
@@ -28,7 +28,19 @@
     </div>
     <main class="resto-main">
     <section class="menu-grid">
-      <div class="menu-groupe">Groupe1</div>
+      <h3>Entrée</h3>
+      <div class="menu-groupe">
+        <div class="menu-items">
+          <div class="description-items">
+          <h4>Fricassée d'escargot</h4>
+          <p>Au piment d'espelette</p>
+        </div>
+          <span class="price">25€</span>
+          <div class="items__check">
+            <i class="fa-solid fa-check"></i>
+          </div>
+        </div>
+      </div>
       <div class="menu-groupe">Groupe2</div>
       <div class="menu-groupe">Groupe3</div>
     </section>
