resto1 texte et bouton commander

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./public/css/style.css" />
     <title>Ohmyfood</title>
   </head>
   <body>
@@ -50,7 +50,7 @@
       <section class="menu">
         <h2>Restaurants</h2>
         <div class="menu_cards">
-          <a href="#" class="card decorationNone">
+          <a href="./pages/resto1.html" class="card decorationNone">
             <div class="card_image new">
               <img
                 src="../P3/Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
