--- a/pages/resto1.html
+++ b/pages/resto1.html
@@ -40,10 +40,102 @@
             <i class="fa-solid fa-check"></i>
           </div>
         </div>
+        <div class="menu-items">
+          <div class="description-items">
+          <h4>Foie gras de canard mi-cuit</h4>
+          <p>Et ses copeaux de truffe noire</p>
+        </div>
+          <span class="price">35€</span>
+          <div class="items__check">
+            <i class="fa-solid fa-check"></i>
+          </div>
+        </div>
+        <div class="menu-items">
+          <div class="description-items">
+          <h4>Oeuf au plat</h4>
+          <p>Assaisonné à la truffe sur lit de percils</p>
+        </div>
+          <span class="price">20€</span>
+          <div class="items__check">
+            <i class="fa-solid fa-check"></i>
+          </div>
+        </div>
       </div>
-      <div class="menu-groupe">Groupe2</div>
-      <div class="menu-groupe">Groupe3</div>
+      <h3>PLATS</h3>
+      <div class="menu-groupe">
+        <div class="menu-items">
+        <div class="description-items">
+        <h4>Filet de boeuf aux herbes</h4>
+        <p>Accompagné de sa ribambelle de légumes</p>
+      </div>
+        <span class="price">40€</span>
+        <div class="items__check">
+          <i class="fa-solid fa-check"></i>
+        </div>
+      </div>
+      <div class="menu-items">
+        <div class="description-items">
+        <h4>Parmentier de queue de boeuf</h4>
+        <p>A la truffe noire sur sa purée de panais</p>
+      </div>
+        <span class="price">35€</span>
+        <div class="items__check">
+          <i class="fa-solid fa-check"></i>
+        </div>
+      </div>
+      <div class="menu-items">
+        <div class="description-items">
+        <h4>Filet de Turbot</h4>
+        <p>Aux agrumes</p>
+      </div>
+        <span class="price">44€</span>
+        <div class="items__check">
+          <i class="fa-solid fa-check"></i>
+        </div>
+      </div>
+
+    </div>
+    <h3>DESSERTS</h3>
+      <div class="menu-groupe">
+        <div class="menu-items">
+        <div class="description-items">
+        <h4>Paris-Brest</h4>
+        <p>Revisité</p>
+      </div>
+        <span class="price">18€</span>
+        <div class="items__check">
+          <i class="fa-solid fa-check"></i>
+        </div>
+      </div>
+      <div class="menu-items">
+        <div class="description-items">
+        <h4>Macaron au chocolat d'exception</h4>
+        <p>Et glace à la vanille de Madagascar</p>
+      </div>
+        <span class="price">22€</span>
+        <div class="items__check">
+          <i class="fa-solid fa-check"></i>
+        </div>
+      </div>
+      <div class="menu-items">
+        <div class="description-items">
+        <h4>Mousse au chocolat</h4>
+        <p>Au piment d'espelette et à la truffe noire</p>
+      </div>
+        <span class="price">23€</span>
+        <div class="items__check">
+          <i class="fa-solid fa-check"></i>
+        </div>
+      </div>
+    </div>
+    <a href="#">
+    <div class="command">
+      <button>Commander</button>
+    </a>
+    </div>
+  
     </section>
+    
   </main>
     
     <footer>
