--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="card_image new">
               <img
                 src="../P3/Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="photo de menilmontant"
+                alt="photo de palette du goût"
               />
             </div>
             <div class="card_description">
@@ -65,11 +65,11 @@
             </div>
           </a>
 
-          <a href="#" class="card decorationNone">
+          <a href="./pages/resto2.html" class="card decorationNone">
             <div class="card_image new">
               <img
                 src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="photo de menilmontant"
+                alt="photo de la note enchantée "
               />
             </div>
             <div class="card_description">
@@ -79,11 +79,11 @@
               <i class="fa-solid fa-heart"></i>
             </div>
           </a>
-          <a href="#" class="card decorationNone">
+          <a href="./pages/resto3.html" class="card decorationNone">
             <div class="card_image">
               <img
                 src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="photo de menilmontant"
+                alt="photo de à la française"
               />
             </div>
             <div class="card_description">
@@ -93,11 +93,11 @@
               <i class="fa-solid fa-heart"></i>
             </div>
           </a>
-          <a href="#" class="card decorationNone">
+          <a href="./pages/resto4.html" class="card decorationNone">
             <div class="card_image">
               <img
                 src="Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="photo de menilmontant"
+                alt="photo du delice des sens"
               />
             </div>
             <div class="card_description">
