correction des textes

--- a/pages/resto1.html
+++ b/pages/resto1.html
@@ -28,7 +28,7 @@
     </div>
     <main class="resto-main">
     <section class="menu-grid">
-      <h3>Entrée</h3>
+      <h3>ENTRÉE</h3>
       <div class="menu-groupe">
         <div class="menu-items">
           <div class="description-items">
