--- a/pages/resto4.html
+++ b/pages/resto4.html
@@ -24,7 +24,7 @@
       />
     </div>
     <div class="resto__title">
-      <h2>La note enchantée</h2>
+      <h2>Le délice des sens</h2>
     </div>
     <main class="resto-main">
     <section class="menu-grid">
@@ -123,7 +123,7 @@
       <div class="menu-items">
         <div class="description-items">
         <h4>Tiramisu</h4>
-        <p>A la noisette</p>
+        <p>À la noisette</p>
       </div>
         <span class="price">23€</span>
         <div class="items__check">
