--- a/pages/resto3.html
+++ b/pages/resto3.html
@@ -24,11 +24,11 @@
       />
     </div>
     <div class="resto__title">
-      <h2>La note enchantée</h2>
+      <h2>À la française</h2>
     </div>
     <main class="resto-main">
     <section class="menu-grid">
-      <h3>Entrée</h3>
+      <h3>ENTRÉE</h3>
       <div class="menu-groupe">
         <div class="menu-items">
           <div class="description-items">
