--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Ohmyfood</title>
   </head>
   <body id="homepage">
+  <div class="loader"></div>
     <header>
       <h1>ohmyfood</h1>
     </header>
@@ -119,5 +120,6 @@
       <p>Mentions légales</p>
       <p>Contact</p>
     </footer>
+  
   </body>
 </html>
