dernier changement titres et lien

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <a href="./pages/palette_du_gout.html" class="card decorationNone">
             <div class="card_image new">
               <img
-                src="../P3/MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="photo_de_palette_du_goût"
+                src="MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="photo_de_palette_du_gout"
               />
               
             </div>
