--- a/pages/delice_des_sens.html
+++ b/pages/delice_des_sens.html
@@ -8,7 +8,7 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
-    <title>La palette du goût</title>
+    <title>Le délice des sens</title>
   </head>
   <body id="page-resto">
     <a href="../index.html">
