public css en css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./public/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/css/style.css" />
     <title>Ohmyfood</title>
   </head>
   <body id="homepage">
