--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -7,7 +7,7 @@
       crossorigin="anonymous"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/css/style.css" />
     <title>A la française</title>
   </head>
   <body id="page-resto">
