supression des fichiers maquettes et ajouts des images assets

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="./pages/palette_du_gout.html" class="card decorationNone">
             <div class="card_image new">
               <img
-                src="MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                src="assets/menu_1.jpg"
                 alt="photo_de_palette_du_gout"
               />
               
@@ -70,7 +70,7 @@
           <a href="./pages/note_enchantee.html" class="card decorationNone">
             <div class="card_image new">
               <img
-                src="MaquettesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                src="assets/menu_2.jpg"
                 alt="photo_de_la_note_enchantée "
               />
             </div>
@@ -83,7 +83,7 @@
           <a href="./pages/a_la_francaise.html" class="card decorationNone">
             <div class="card_image">
               <img
-                src="MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                src="assets/menu_3.jpg"
                 alt="photo_de_a_la_francaise"
               />
             </div>
@@ -96,7 +96,7 @@
           <a href="./pages/delice_des_sens.html" class="card decorationNone">
             <div class="card_image">
               <img
-                src="MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                src="assets/menu_4.jpg"
                 alt="photo_du_delice_des_sens"
               />
             </div>
