--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -19,7 +19,7 @@
 
     <div class="banner">
       <img
-        src="../MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="../assets/menu_3.jpg"
         alt="photo_de_à_la_française"
       />
     </div>
