--- a/pages/delice_des_sens.html
+++ b/pages/delice_des_sens.html
@@ -19,7 +19,7 @@
 
     <div class="banner">
       <img
-        src="../MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        src="../assets/menu_4.jpg"
         alt="photo_du_délice_des_sens"
       />
     </div>
