--- a/pages/palette_du_gout.html
+++ b/pages/palette_du_gout.html
@@ -19,7 +19,7 @@
 
     <div class="banner">
       <img
-        src="../MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        src="../assets/menu_1.jpg"
         alt="La_palette_du_goût"
       />
     </div>
