--- a/pages/note_enchantee.html
+++ b/pages/note_enchantee.html
@@ -19,7 +19,7 @@
 
     <div class="banner">
       <img
-        src="../MaquettesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        src="../assets/menu_2.jpg"
         alt="photo_de_la_note_enchantée"
       />
     </div>
